--- a/src/elementPlus/scss/var.scss
+++ b/src/elementPlus/scss/var.scss
@@ -2,23 +2,22 @@
 $types: primary, success, warning, danger, error, info;
 
 $colors: (
-    "primary": (
-        //"base": #0099a1,
-        "base": #5067D7,
-    ),
-    "success": (
-        "base": #21ba45,
-    ),
-    "warning": (
-        "base": #f2711c,
-    ),
-    "danger": (
-        "base": #db2828,
-    ),
-    "error": (
-        "base": #db2828,
-    ),
-    "info": (
-        "base": #42b8dd,
-    ),
+        "primary": (
+                "base": #0099a1,
+        ),
+        "success": (
+                "base": #21ba45,
+        ),
+        "warning": (
+                "base": #f2711c,
+        ),
+        "danger": (
+                "base": #db2828,
+        ),
+        "error": (
+                "base": #db2828,
+        ),
+        "info": (
+                "base": #42b8dd,
+        ),
 );
