--- a/src/elementPlus/scss/var.scss
+++ b/src/elementPlus/scss/var.scss
@@ -3,7 +3,7 @@ $types: primary, success, warning, danger, error, info;
 
 $colors: (
         "primary": (
-                "base": #0099a1,
+                "base": #a1b1c1,
         ),
         "success": (
                 "base": #21ba45,
